[package]
name = "surge"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/xztaityozx/surge"
homepage = "https://github.com/xztaityozx/surge"
documentation = "https://github.com/xztaityozx/surge"
description = "high performance while read L; do echo $L | some-command | paste -sd ' '; done shorthand"
authors = ["xztaityozx"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
crossbeam = "0.8"
log = "0.4"
env_logger = "0.9.0"
clap = {version = "3.1.6", features = ["derive"]}
chrono = "0.4"
ansi_term = "0.12"
clap_complete = "3.1.1"
