[package]
name = "surge"
version = "0.1.5"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/xztaityozx/surge"
homepage = "https://github.com/xztaityozx/surge"
documentation = "https://github.com/xztaityozx/surge"
description = "high performance while read L; do echo $L | some-command | paste -sd ' '; done shorthand"
authors = ["xztaityozx"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"
crossbeam = "0.8.2"
log = "0.4.19"
env_logger = "0.10.0"
clap = {version = "4.3.19", features = ["derive"]}
anstyle = "1.0.1"
clap_complete = "4.3.2"
